# nekolib-bundle

./: Cargo.toml  README.md  edition-2015.diff
src/: lib.rs  library.rs  main.rs  metadata.rs  polish.rs  resolve.rs  source.rs
