[package]
name = "nekolib-bundle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_toml = "0.15.3"
clap = { version = "4.3.8", features = ["derive"] }
home = "0.5.5"
proc-macro2 = "1.0.63"
quote = "1.0.28"
serde = { version = "1.0.164", features = ["derive"] }
syn = { version = "2.0.22", features = ["full", "visit-mut"] }
toml = "0.7.5"
